test: update tests for UserService